fix version label alignment

--- a/docs/css/weewx_docs.css
+++ b/docs/css/weewx_docs.css
@@ -349,7 +349,6 @@ p .symcode {
 }
 .version {
   font-size: 60%;
-  padding-right: 10px;
 }
 .logo {
   width: 32px;
